force-app/main/default/objects/RiskIssueTemplate__c/RiskIssueTemplate__c.object-meta.xml
<CustomObject>
    <description>Template records for Risk &amp; Issue object to be created for each project</description>
    <label>Risk &amp; Issue Template</label>
    <nameField>
        <displayFormat>RIT-{0000000}</displayFormat>
        <label>Template Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Risk &amp; Issue Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>