force-app/main/default/objects/RiskIssueTemplate__c/fields/Risk_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Risk_Sequence__c</fullName>
    <label>Risk Sequence</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>