force-app/main/default/objects/RiskIssueTemplate__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Risk or Issue status</description>
    <inlineHelpText>Risk or Issue status</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Risk_Issue_Status</valueSetName>
    </valueSet>
</CustomField>