force-app/main/default/objects/RiskIssueTemplate__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Risk type</description>
    <inlineHelpText>Risk type</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Risk_Issue_Types</valueSetName>
    </valueSet>
</CustomField>