force-app/main/default/objects/RiskIssueTemplate__c/listViews/Active_Templates.listView-meta.xml
<ListView>
    <fullName>Active_Templates</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Type__c</columns>
    <columns>Risk_Sequence__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>notEqual</operation>
    </filters>
    <label>Active Templates</label>
    <language>en_US</language>
</ListView>